Fix the alignment problems in the registration page

--- a/frontend/src/components/Register.scss
+++ b/frontend/src/components/Register.scss
@@ -3,118 +3,207 @@
 .container_register {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
-}
-
-.form {
-  margin-top: 2em;
-  margin-left: 2em;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
   font:$font-family;
   font-size: 15px;
-
-  &__group {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-bottom: 1em;
-    
-    label {
-      margin-right: 4em;
-      width: 4em;
-      align-items: left;
-    }
-    input {
-      align-items: left;
-      width: 20em;
-      
-    }
-    select {
-      width: 20em;
-    }
-  }
-
-  &__group1 {
-    display: flex;
-    flex-direction: row;
-    
-  }
-
-  &__group2 {
-    display: flex;
-    flex-direction: row;
-
-    label {
-      margin-right: 2em;
-      width: 8em;
-      align-items: left;
-    }
-
-    select {
-      width: 20em;
-      margin-left: 0.5em;
-    }
-  }
-
-  &__group3 {
-    display: flex;
-    justify-content: space between;
-    margin-left: 1em;
-    margin-right: 1em;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    
-      width: 70%;
-
-    label, Checkbox {
-      margin-left: 1em;
-      margin-right: 1em;
-      margin-bottom: 1em;
-      margin-top: 1em;
-    
-    
-    }
-  }
-
-     
+  margin-left: 2em;
+  flex-wrap: wrap;
+  // background-color: #00e0e8;
+  background-image: url("https://www.transparenttextures.com/patterns/subtle-dots.png");
 }
 
-.btn {
-  background-color: $green;
-  width: 8em;
-  align-items:center;
-  margin-right: 10em;
+input {
+  height: 2em;
+}
+
+ select {
+  height: 2.2em;
+  width: 12em;
+}
+
+label {
+  width: 3em;
+}
+
+form {
+  margin-top: 2em;
+  font:$font-family;
+  align-items: center;
+}
+
+.group {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1em;
+  
+  label {
+    margin-right: 4em;
+    align-items: left;
+  }
+  input {
+    align-items: left;
+  
+  }
   
 }
 
+.group1 {
+  display: flex;
+  align-items: center;
+  width: 90%;
+    
+  input, select {
+    width: 20em;
+  }
+  
+}
+
+.group2 {
+  display: flex;
+  align-items: space-evenly;
+  border-style: solid;
+  border-color: $green;
+   width: 90%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  box-sizing: content-box;
+  height: 3em;
+  text-align: left;
+ 
+  label {
+    margin-right: 0.5em;
+    width: 10em;
+    align-self: left;
+    flex-grow: 1;
+    flex-basis: 25%;
+    margin-top: 0.5em;
+  }
+
+  select {
+    width: 25em;
+    flex-grow: 1;
+    flex-basis: 25%;
+    margin-top: 0.5em;
+  }
+}
+
+.group3 {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 1em;
+  margin-right: 10em;
+  border-style: solid;
+  border-color: $green;
+  flex-wrap: wrap;
+  width: 90%;
+  
+    
+  label{
+    margin-right: 0.3em;
+    margin-left: 0.3em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    flex-basis: 10.5%;
+  }
+}
 
 .main_profile {
   display: flex;
   flex-direction: column;
-  margin-right: 3em;
+  margin-right: 2em;
+  border-style: solid;
+  border-color: $green;
+  flex-basis: 50%;
+  flex-grow: 1;
+
+  label {
+    margin-left: 1em;
+    margin-top: 1em;
+  }
+
+  input {
+    margin-top: 1em;
+  }
   
 }
 
-.picture {
-  margin-left: 3em;
-  background-color: $navWhite;
-  align-items: right;
-  width: 30%;
-  }
 
-#file {
-  
+.image-container{
+  height: 300px;
+  width: 300px;
+  border-radius: 10px;
+  background-color: $navWhite;
+  border-style: solid;
+  border-color: $green;
+  flex-basis: 35%;
+  flex-grow: 1;
+  background-image:url("https://images.unsplash.com/photo-1596468138838-0f34c2d0773b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+}
+
+.image-heading{
+  text-align: center;
+  font-family: $font-family;
+  font-size: 12;
+  font-weight: bold;
+}
+.img-holder{
+  margin: auto;
+  width: 150px;
+  height: 150px;
+  border: 3px black solid;
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+.img{
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+#image-input[type="file"] {
+	display: none;
+}
+.image-label{
   width: 100%;
-  padding: 120px 0 0 0;
-  height: 100px;
-  overflow: hidden;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: url('https://cdn1.iconfinder.com/data/icons/hawcons/32/698394-icon-130-cloud-upload-512.png') center center no-repeat #e4e4e4;
-  border-radius: 20px;
-  background-size: 60px 60px;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+.image-upload{
+  margin: auto;
+  width: 200px;
+	height: 30px;
+  color:black;
+  border-radius: 10px;
+  background-color: $green;
+  text-align: center;
+  cursor: pointer;
+}
+
+
+.btn {
+  background-color: $green;
+  width: 12em;
+  height: 3em;
+  align-items:center;
+}
+
+.preference {
+  color: $green;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+.group3 label {
+  display: inline-block;
+  padding-right: 10px;
+  white-space: nowrap;
+}
+.group3 input {
+  vertical-align: middle;
+}
+.group3 label span {
+  vertical-align: middle;
 }
